@@ -133,8 +133,9 @@ class AdderAtlasPlugin (AdderPluginBase):
                 # failed jobs
                 if self.job.prodSourceLabel in ['managed','test']:
                     self.logTransferring = True
-            elif self.job.jobStatus == 'finished' and EventServiceUtils.isEventServiceJob(self.job):
-                # transfer only log file for ES jobs 
+            elif self.job.jobStatus == 'finished' and EventServiceUtils.isEventServiceJob(self.job) \
+                    and not EventServiceUtils.isSingleConsumerJob(self.job):
+                # transfer only log file for normal ES jobs 
                 self.logTransferring = True
             else:
                 self.goToTransferring = True
@@ -184,7 +185,8 @@ class AdderAtlasPlugin (AdderPluginBase):
                 if self.jobStatus == 'failed' and file.type != 'log':
                     continue
                 # add only log file for successful ES jobs
-                if self.job.jobStatus == 'finished' and EventServiceUtils.isEventServiceJob(self.job) and file.type != 'log':
+                if self.job.jobStatus == 'finished' and EventServiceUtils.isEventServiceJob(self.job) \
+                        and not EventServiceUtils.isSingleConsumerJob(self.job) and file.type != 'log':
                     continue
                 try:
                     # fsize
@@ -571,7 +573,8 @@ class AdderAtlasPlugin (AdderPluginBase):
                 if tmpFile.type in ['log','output']:
                     if self.goToTransferring or (self.logTransferring and tmpFile.type == 'log'):
                         # don't go to tranferring for successful ES jobs 
-                        if self.job.jobStatus == 'finished' and EventServiceUtils.isEventServiceJob(self.job):
+                        if self.job.jobStatus == 'finished' and EventServiceUtils.isEventServiceJob(self.job) \
+                                and not EventServiceUtils.isSingleConsumerJob(self.job):
                             continue
                         self.result.transferringFiles.append(tmpFile.lfn)
         elif not "--mergeOutput" in self.job.jobParameters:
